--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+      <a href="index.html" class="logo"><img src="assets/img/myname.png" alt="" class="img-fluid"></a>
       <!-- Uncomment below if you prefer to use an text logo -->
       <!-- <h1 class="logo"><a href="index.html">Folio</a></h1> -->
 
@@ -321,7 +321,7 @@
             <div class="col-lg-4 col-md-6">
               <div class="journal-info">
 
-                <img src="assets/img/blog-post-1.jpg" class="img-responsive" alt="img">
+                <img src="assets/img/portfolio/profiles-03.png" class="img-responsive" alt="img">
 
                 <div class="journal-txt">
 
@@ -337,12 +337,12 @@
             <div class="col-lg-4 col-md-6">
               <div class="journal-info">
 
-                <img src="assets/img/blog-post-2.jpg" class="img-responsive" alt="img">
+                <img src="assets/img/portfolio/profiles-01.png" class="img-responsive" alt="img">
 
                 <div class="journal-txt">
 
-                  <h4><a>WE'RE GONA MAKE DREAMS COMES</a></h4>
-                  <p class="separator">To an English person, it will seem like simplified English
+                  <h4><a>Neslihan Yalcin / Mom, Taught Me Art</a></h4>
+                  <p class="separator">I believe Betul creates interesting ideas into beautifully well done illustrations. I trust that she can do great things when she sets her mind to it in her future.
                   </p>
 
                 </div>
@@ -353,12 +353,12 @@
             <div class="col-lg-4 col-md-6">
               <div class="journal-info">
 
-                <img src="assets/img/blog-post-3.jpg" class="img-responsive" alt="img">
+                <img src="assets/img/portfolio/profiles-02.png" class="img-responsive" alt="img">
 
                 <div class="journal-txt">
 
-                  <h4><a>NEW LIFE CIVILIZATIONS TO BOLDLY</a></h4>
-                  <p class="separator">To an English person, it will seem like simplified English
+                  <h4><a>Chris / Friend</a></h4>
+                  <p class="separator">I think Betul's art is extremely well done and beautiful she put lots of work and effort into her designs and never stray away from focus, i think she's genuinely a great loving person who warms up once you get to know her she's such a fun person to talk to and be around aswell.
                   </p>
 
                 </div>
@@ -373,17 +373,17 @@
     </div><!-- End Journal Section -->
 
     <!-- ======= Contact Section ======= -->
-    <div id="contact" class="paddsection">
+    <div id="contact" class="text-left paddsection">
       <div class="container">
         <div class="contact-block1">
-          <div class="row">
+          <div class="">
 
-            <div class="col-lg-6">
+            <div class="">
               <div class="contact-contact">
 
-                <h2 class="mb-30">GET IN TOUCH</h2>
+                <h2 class="section-title text-center">GET IN TOUCH</h2>
 
-                <ul class="contact-details">
+                <ul class="contact-details text-center">
                   <li><span><h4><a href="assets/img/resume.pdf">MY RESUME</a></h4></span></li>
                   <li><span><a href="tel:17785510664">778-551-0664</a></span></li>
                   <li><span><a href="mailto:littlebetul@gmail.com">littlebetul@gmail.com</a></span></li>
